--- a/10-Login_Form/index.html
+++ b/10-Login_Form/index.html
@@ -17,8 +17,8 @@
       <button type="submit">Log in</button>
 
       <div class="keep-log">
-        <input type="checkbox" name="keep-log">
-        <span>Keep me logged</span>
+        <input type="checkbox" name="keep-log" id="checkbox">
+        <label for"checkbox">Keep me logged</label>
       </div>
     </form>
   </div>
