update Password Generator

--- a/Password_Generator/index.html
+++ b/Password_Generator/index.html
@@ -25,7 +25,7 @@
       <div class="checkboxs">
         <div class="uppercase-check checkbox-container">
           <input type="checkbox" id="uppercase-check" />
-          <label for="uppercase-check">Upper case</label>>
+          <label for="uppercase-check">Upper case</label>
         </div>
 
         <div class="lowercase-check checkbox-container">
